--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,8 +1,8 @@
 - img: zu-yen
   name: Zu Yen
   profession: student geneeskunde
-  quote: "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."
+  quote: "Persoonlijk heb ik veel opgestoken van de cursus als aanvulling op een basis opleiding. Cili geeft daarin uitstekende begeleiding."
 - img: richard-biharie
   name: Richard Biharie
   profession: software engineer
-  quote: "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin."
+  quote: "Ik wist dat ik niet veel kon verwachten van een korte cursus. Toch heb ik er wat aan gehad en ben meer te weten gekomen over het waarom van een foto."
