--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
-- title: over mij
-  url: /over-cecilia-kocsis
+- title: de docente
+  url: /de-docente
 - title: cursussen
   mod: button button--header
   url: /cursussen
