--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,8 +1,8 @@
-- img: zu-yen
-  name: Zu Yen
+- img: morgan
+  name: Daniëlle Goudswaard
   profession: student geneeskunde
   quote: "Persoonlijk heb ik veel opgestoken van de cursus als aanvulling op een basis opleiding. Cili geeft daarin uitstekende begeleiding."
-- img: richard-biharie
+- img: holyoake
   name: Richard Biharie
   profession: software engineer
   quote: "Ik wist dat ik niet veel kon verwachten van een korte cursus. Toch heb ik er wat aan gehad en ben meer te weten gekomen over het waarom van een foto."
