edit marker | update about

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
-- title: de docente
-  url: /docente
+- title: over ziris
+  url: /over-ziris
 - title: cursussen
   mod: button button--header
   url: /cursussen
