update img title | copy

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,11 +1,12 @@
 intro:
-  title: goede foto’s maken. zelfs met je mobiel
-  subtitle: door bij mij een cursus te volgen leer je waarom.
-  discover: ontdenk meer
+  title: maak de klik tussen kunst en fotografie
+  subtitle: en je zal anders leren kijken.
+  img: manray.jpg
+  discover: ontdek meer
 
 art:
-  title: maak de klik tussen kunstgeschiedenis en fotografie
-  subtitle: en je zal anders leren kijken.
+  title: goede foto’s maken. zelfs met je mobiel
+  subtitle: door bij mij een cursus te volgen leer je waarom.
   img: blossfeldt.jpg
 
 pattern:
