remove mapplethorpe | add scrollTo

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,8 +2,8 @@ intro:
   title: maak de klik tussen kunst en fotografie
   subtitle:
   img:
-    url: mapplethorpe.jpg
-    caption: Robert Mapplethorpe, Ken Moody and Robert Sherman, 1984
+    url: jessen.jpg
+    caption: Rye Jessen, Untitled, 2018
   discover: ontdek meer
 
 art:
