update deploy settings | production config

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,15 @@
 host: 0.0.0.0
 
-sass:
-    style: compressed
+plugins:
+  - jekyll-minifier
+  - jekyll-autoprefixer
+  
+jekyll-minifier:
+  uglifier_args:
+    harmony: true
+
+autoprefixer:
+  only_production: true
 
 defaults:
   - scope:
