--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,14 @@
 host: 0.0.0.0
 
+sass:
+    style: compressed
+
 plugins:
   - jekyll-minifier
   - jekyll-autoprefixer
   
 jekyll-minifier:
+  compress_css: false
   uglifier_args:
     harmony: true
 
