Update Pages “members”

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,8 +1,7 @@
-- img: /assets/img/morgan.jpg
-  name: Daniëlle Goudswaard
-  profession: student geneeskunde
-  quote: "Persoonlijk heb ik veel opgestoken van de cursus als aanvulling op een basis opleiding. Cili geeft daarin uitstekende begeleiding."
-- img: /assets/img/holyoake.jpg
-  name: Richard Biharie
-  profession: software engineer
-  quote: "Ik wist dat ik niet veel kon verwachten van een korte cursus. Toch heb ik er wat aan gehad en ben meer te weten gekomen over het waarom van een foto."
+name: Henk Vriesman
+img: /assets/img/portret-180929.jpg
+profession: Digital Product Designer / Maker
+quote: >-
+  Cili is echt een topper. Veel van geleerd! Echt niet normaal hoe goed zij is.
+  Het meeste heb ik nog opgestoken van de tips die ze me gaf hoe ik naar
+  symboliek moest kijken. Echt geweldig!
