Update Pages “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 intro:
-  caption: 'Rye Jessen, Untitled, 2018'
+  caption: 'L. Moholy Nagy, Lucia. 1927'
   discover: ontdek meer
-  img: /assets/img/jessen.jpg
+  img: /assets/img/moholy-nagy-origineel.jpg
   title: maak de klik tussen kunst en fotografie
 art:
   caption: Karl Blossfeldt
