--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,12 +1,12 @@
 intro:
   caption: 'L. Moholy Nagy, Lucia. 1927'
   discover: ontdek meer
-  img: /assets/img/moholy-nagy-origineel.jpg
+  img: /assets/img/moholynagy.jpg
   title: maak de klik tussen kunst en fotografie
 art:
   caption: Karl Blossfeldt
   img: /assets/img/blossfeldt.jpg
-  subtitle: helpt je om op een meer creatieve en bewuste manier te fotograferen.
+  subtitle: om op een meer creatieve en bewuste manier te fotograferen.
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
   button: bekijk cursussen
