Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,7 +6,7 @@ intro:
 art:
   caption: Karl Blossfeldt
   img: /assets/img/blossfeldt.jpg
-  subtitle: om op een meer creatieve en bewuste manier te fotograferen.
+  subtitle: om creatief en bewust te fotograferen
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
   button: bekijk cursussen
