--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,8 +4,8 @@ intro:
   img: /assets/img/moholynagy.jpg
   title: maak de klik tussen kunst en fotografie
 art:
-  caption: Karl Blossfeldt
-  img: /assets/img/blossfeldt.jpg
+  caption: 'Karl Blossfeldt, c. 1910'
+  img: /assets/img/karl-blossfeldt.jpg
   subtitle: om creatief en bewust te fotograferen
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
