Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,8 +10,8 @@ art:
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
   button: bekijk cursussen
-  subtitle: door bij mij een cursus te volgen leer je waarom.
-  title: goede foto’s maken. zelfs met je mobiel
+  subtitle: leer je bij Ziris Kunst & Fotografie
+  title: goede foto’s maken zelfs met je mobiel
 proof:
   members:
     - img: /assets/img/morgan.jpg
