Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,7 +5,7 @@ intro:
   title: maak de klik tussen kunst en fotografie
 art:
   caption: 'Karl Blossfeldt, c. 1910'
-  img: /assets/img/karl-blossfeldt.jpg
+  img: /assets/img/blossfeldt.jpg
   subtitle: om creatief en bewust te fotograferen
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
