--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 intro:
   caption: 'L. Moholy Nagy, Lucia. 1927'
   discover: ontdek meer
-  img: /assets/img/röntgen.jpg
+  img: /assets/img/moholynagy.jpg
   title: maak de klik tussen kunst en fotografie
 art:
   caption: 'Karl Blossfeldt, c. 1910'
