--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: "/assets/img"
+media_folder: "assets/img"
 publish_mode: editorial_workflow
 
 collections:
