Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,7 +10,7 @@ art:
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
   button: bekijk cursussen
-  subtitle: leer je bij Ziris Kunst & Fotografie
+  subtitle: leer je bij Ziris Kunst | Fotografie
   title: goede foto’s maken zelfs met je mobiel
 proof:
   members:
