Update Pagina's “convince”

--- a/_data/convince.yml
+++ b/_data/convince.yml
@@ -1,1 +1,3 @@
-text: De inschrijving is via een contactformulier. Betaling via factuur uiterlijk binnen 30 dagen na inschrijving.
+text: >-
+  Ongeveer een week voor de start van de cursus ontvang je de eerste foto
+  opdracht.
