Update Pagina's “convince”

--- a/_data/convince.yml
+++ b/_data/convince.yml
@@ -1,3 +1,1 @@
-text: >-
-  Ongeveer een week voor de start van de cursus ontvang je de eerste foto
-  opdracht.
+text: Een week voor de start van de cursus ontvang je de eerste foto opdracht.
