Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 intro:
-  caption: 'L. Moholy Nagy, Lucia. 1927'
+  caption: Man Ray Zonder titel
   discover: ontdek meer
-  img: /assets/img/moholynagy.jpg
+  img: /assets/img/manray.jpg
   title: maak de klik tussen kunst en fotografie
 art:
   caption: 'Karl Blossfeldt, c. 1910'
