Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,5 +1,5 @@
 intro:
-  caption: Man Ray Zonder titel
+  caption: 'Man Ray, zonder titel. 1932'
   discover: ontdek meer
   img: /assets/img/manray.jpg
   title: maak de klik tussen kunst en fotografie
