--- a/_data/home.yml
+++ b/_data/home.yml
@@ -11,7 +11,7 @@ art:
 pattern:
   button: bekijk cursussen
   subtitle: leer je bij Ziris Kunst | Fotografie
-  title: goede foto’s maken zelfs met je mobiel
+  title: goede foto’s maken óók met je mobiel
 proof:
   members:
     - img: /assets/img/morgan.jpg
