--- a/_data/home.yml
+++ b/_data/home.yml
@@ -17,11 +17,11 @@ proof:
     - img: /assets/img/morgan.jpg
       name: Daniëlle Goudswaard
       profession: Student SPH
-      quote: Echt geniaal dit Cili. Ik ben helemaal onder de indruk van dit fenomeen!
+      quote: Geniaal. Ik ben helemaal onder de indruk!
     - img: /assets/img/holyoake.jpg
       name: Richard Bihari
       profession: Software Ontwikkelaar
       quote: >-
         Nu heb ik echt het idee dat ik veel meer weet over hoe je inhoudelijk
-        een goede foto kan maken. Chapeau Cili!
+        een goede foto kan maken. 
   title: beoordelingen cursisten
