Update Pagina's “convince”

--- a/_data/convince.yml
+++ b/_data/convince.yml
@@ -1,1 +1,1 @@
-text: Een week voor de start van de cursus ontvang je de eerste foto opdracht.
+text: Ziris neemt een week voor de start contact met je op.
