Update Pagina's “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,7 +4,9 @@ intro:
   img: /assets/img/donyale-luna.jpg
   title: maak de klik tussen kunst en fotografie
 art:
-  caption: 'Richard Avedon, Richard Avedon and James Baldwin. 1963'
+  caption: >-
+    Richard Avedon and James Baldwin, New York City, September  1, 1964
+    (photomat) Photograph by Richard Avedon, © The Richard Avedon Foundation
   img: /assets/img/avedon-baldwin.jpg
   subtitle: om creatief en bewust te fotograferen
   title: aangeleerde kijkpatronen herkennen en doorbreken
