TDH: refine transitions | copy

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -12,18 +12,16 @@ art:
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
   button: bekijk cursussen
-  subtitle: leer je bij Ziris | Kunst en Fotografie
+  subtitle: leer je bij ziris | kunst en fotografie
   title: goede foto’s maken óók met je mobiel
 proof:
   members:
     - img: /assets/img/morgan.jpg
       name: Daniëlle Goudswaard
       profession: Student SPH
-      quote: Geniaal. Ik ben helemaal onder de indruk!
+      quote: Persoonlijk heb ik veel opgestoken van de cursus als aanvulling op een basis opleiding. Cili geeft daarin uitstekende begeleiding.
     - img: /assets/img/holyoake.jpg
       name: Richard Bihari
       profession: Software Ontwikkelaar
-      quote: >-
-        Nu heb ik echt het idee dat ik veel meer weet over hoe je inhoudelijk
-        een goede foto kan maken. 
+      quote: Ik wist dat ik niet veel kon verwachten van een korte cursus. Toch heb ik er wat aan gehad en ben meer te weten gekomen over het waarom van een foto. 
   title: beoordelingen cursisten
