TDH: minor copy update | pattern__bg back

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -13,7 +13,7 @@ art:
 pattern:
   button: bekijk cursussen
   subtitle: leer je bij ziris | kunst en fotografie
-  title: goede foto’s maken óók met je mobiel
+  title: goede foto’s maken, óók met je mobiel
 proof:
   members:
     - img: /assets/img/morgan.jpg
