--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,5 +1,5 @@
 intro:
-  caption: 'Charlotte March, Donyale Luna, 1966. Museum Ludwig Köln.'
+  caption: 'Charlotte March, Donyale Luna, 1966.'
   discover: ontdek meer
   img: /assets/img/donyale-luna.jpg
   title: maak de klik tussen kunst en fotografie
