revert to normal content

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,8 +1,8 @@
 intro:
-  caption: 'Just some random dog in the snow'
+  caption: 'Charlotte March, Donyale Luna, 1966.'
   discover: ontdek meer
-  img: /assets/img/xmas-dog.jpg
-  title: Bol―dog Karácsonyt Cecilia!
+  img: /assets/img/donyale-luna.jpg
+  title: maak de klik tussen kunst en fotografie
 art:
   caption: >-
     Richard Avedon and James Baldwin, New York City, September  1, 1964
