--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ defaults:
       title: "ziris | kunst en fotografie"
       description: "Ziris biedt cursussen aan op het gebied van kunstgeschiedenis in combinatie met fotografie en beoogt een verbinding te maken tussen kunsttheorie en praktijk."
       img: /assets/img/ziris-og-image.png
+      header-animation: a-del-150
   - scope:
       path: ""
       type: "posts"
