--- a/_data/home.yml
+++ b/_data/home.yml
@@ -11,7 +11,7 @@ art:
   subtitle: om creatief en bewust te fotograferen
   title: aangeleerde kijkpatronen herkennen en doorbreken
 pattern:
-  button: bekijk cursussen
+  button: bekijk aanbod
   subtitle: leer je bij ziris | kunst en fotografie
   title: 'goede foto’s maken, óók met je mobiel'
 proof:
