add img-loader placeholder

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ sass:
 plugins:
   - jekyll-minifier
   - jekyll-autoprefixer
+  - jekyll-thumb
+
+thumb:
+  optipng: true
   
 jekyll-minifier:
   compress_css: false
