--- a/admin/config.yml
+++ b/admin/config.yml
@@ -101,7 +101,7 @@ collections:
       - {label: "Categorie", name: "category", widget: "select", options: ["volwassenen", "jongeren", "kinderen"]}
       - {label: "Soort les", name: "type", widget: "string", required: false}
       - {label: "Beschrijving", name: "description", widget: "text"}
-      - {label: "Thumbnail", name: "thumb", widget: "image"}
+      - {label: "Thumbnail", name: "thumb", widget: "image", required: false}
       - {label: "Afbeelding", name: "img", widget: "image"}
       - {label: "Afb. beschrijving", name: "caption", widget: "string"}
       - {label: "Aantal lessen", name: "amount", widget: "string"}
