--- a/admin/config.yml
+++ b/admin/config.yml
@@ -99,9 +99,9 @@ collections:
       - {label: "Datum", name: "date", widget: "datetime"}
       - {label: "Zichtbaar", name: "visible", widget: "boolean"}
       - {label: "Categorie", name: "category", widget: "select", options: ["volwassenen", "jongeren", "kinderen"]}
-      - {label: "Soort les", name: "type", widget: "string", required: false}
+      - {label: "Soort les", name: "type", widget: "string"}
       - {label: "Beschrijving", name: "description", widget: "text"}
-      - {label: "Thumbnail", name: "thumb", widget: "image", required: false}
+      - {label: "Thumbnail (optioneel)", name: "thumb", widget: "image", required: false}
       - {label: "Afbeelding", name: "img", widget: "image"}
       - {label: "Afb. beschrijving", name: "caption", widget: "string"}
       - {label: "Aantal lessen", name: "amount", widget: "string"}
@@ -109,5 +109,5 @@ collections:
       - {label: "Start cursus", name: "start", widget: "string"}
       - {label: "Locatie", name: "location", widget: "string"}
       - {label: "Prijs", name: "price", widget: "string"}
-      - {label: "Inclusief", name: "inc", widget: "string", required: false}
+      - {label: "Inclusief (optioneel)", name: "inc", widget: "string", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
