--- a/admin/config.yml
+++ b/admin/config.yml
@@ -90,7 +90,7 @@ collections:
           - {label: "Tekstje", name: "text", widget: "string"}
 
   - name: "cursussen" # Used in routes, e.g., /admin/collections/blog
-    label: "Cursussen" # Used in the UI
+    label: "Aanbod" # Used in the UI
     folder: "_posts/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
@@ -101,7 +101,7 @@ collections:
       - {label: "Categorie", name: "category", widget: "select", options: ["volwassenen", "jongeren", "kinderen"]}
       - {label: "Soort les", name: "type", widget: "string"}
       - {label: "Beschrijving", name: "description", widget: "text"}
-      - {label: "Thumbnail (optioneel)", name: "thumb", widget: "image", required: false}
+      - {label: "Thumbnail", name: "thumb", widget: "image", required: false}
       - {label: "Afbeelding", name: "img", widget: "image"}
       - {label: "Afb. beschrijving", name: "caption", widget: "string"}
       - {label: "Aantal lessen", name: "amount", widget: "string"}
@@ -109,5 +109,5 @@ collections:
       - {label: "Start cursus", name: "start", widget: "string"}
       - {label: "Locatie", name: "location", widget: "string"}
       - {label: "Prijs", name: "price", widget: "string"}
-      - {label: "Inclusief (optioneel)", name: "inc", widget: "string", required: false}
+      - {label: "Inclusief", name: "inc", widget: "string", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
