--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: master
 
 media_folder: "assets/img"
-publish_mode: editorial_workflow
+# publish_mode: editorial_workflow
 
 collections:
   - label: "Pagina's"
